Updated German man page translation. Closes: #653360

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.9.15) UNRELEASED; urgency=low
+
+  * Updated German man page translation. Closes: #653360
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 03 Jan 2012 16:48:54 -0400
+
 debhelper (8.9.14) unstable; urgency=low
 
   * Typo. Closes: #653006
