--- a/debhelper.pod
+++ b/debhelper.pod
@@ -267,9 +267,9 @@ introduced. You tell debhelper which compatibility level it should use, and
 it modifies its behavior in various ways.
 
 Tell debhelper what compatibility level to use by writing a number to
-F<debian/compat>. For example, to turn on v8 mode:
+F<debian/compat>. For example, to turn on v9 mode:
 
-  % echo 8 > debian/compat
+  % echo 9 > debian/compat
 
 Unless otherwise indicated, all debhelper documentation assumes that you
 are using the most recent compatibility level, and in most cases does not
@@ -435,8 +435,6 @@ none is specified.
 
 =item v8
 
-This is the recommended mode of operation.
-
 Changes from v7 are:
 
 =over 8
@@ -466,7 +464,7 @@ B<dh_auto_>I<*> prefer to use Perl's B<Module::Build> in preference to F<Makefil
 
 =item v9
 
-This compatibility level is still open for development; use with caution.
+This is the recommended mode of operation.
 
 Changes from v8 are:
 
@@ -518,6 +516,20 @@ build-id.
 
 Executable debhelper config files are run and their output used as the
 configuration.
+
+=back
+
+=item v10
+
+This compatibility level is still open for development; use with caution.
+
+Changes from v9 are:
+
+=over 8
+
+=item -
+
+None yet..
 
 =back
 
