--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-debhelper (8.9.15) UNRELEASED; urgency=low
+debhelper (9.20120115) unstable; urgency=low
 
+  * Finalized v9 mode, which is the new recommended default.
+    (But continuing to use v8 is also fine.)
+  * It is now deprecated for a package to not specify a compatability
+    level in debian/compat. Debhelper now warns if this is not done,
+    and packages without a debian/compat will eventually FTBFS.
   * Updated German man page translation. Closes: #653360
 
- -- Joey Hess <joeyh@debian.org>  Tue, 03 Jan 2012 16:48:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Jan 2012 13:59:49 -0400
 
 debhelper (8.9.14) unstable; urgency=low
 
