--- a/doc/TODO
+++ b/doc/TODO
@@ -1,10 +1,12 @@
-v9:
+v10:
 
 * escaping in config files (for whitespace)?
 * dh_installinit --restart-after-upgrade as default?
 
 Deprecated:
 
+* make a missing debian/compat an error. (started printing warning messages
+  in 20120115)
 * DH_COMPAT 1, 2, 3, 4. Can be removed once all packages are seen to be using
   a newer version. I won't hold my breath. (2 and 3 are getting close though.)
 * dh_suidregister. Once nothing in the archive uses it.
