--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -2179,7 +2179,7 @@ msgstr ""
 #: dh:135
 msgid ""
 "Python tools are not run by dh by default, due to the continual change in "
-"that area. (Before compatability level v9, dh does run B<dh_pysupport>.)  "
+"that area. (Before compatibility level v9, dh does run B<dh_pysupport>.)  "
 "Here is how to use B<dh_python2>."
 msgstr ""
 
