--without foo,bar now supported

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (9.20120115) unstable; urgency=low
   * It is now deprecated for a package to not specify a compatibility
     level in debian/compat. Debhelper now warns if this is not done,
     and packages without a debian/compat will eventually FTBFS.
+  * dh: --without foo,bar now supported.
   * Updated German man page translation. Closes: #653360
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Jan 2012 13:59:49 -0400
