--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20120116) UNRELEASED; urgency=low
+
+  * dh_auto_install: Set AM_UPDATE_INFO_DIR=no to avoid automake
+    generating an info dir file. Closes: #634741
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 08 Feb 2012 13:46:13 -0400
+
 debhelper (9.20120115) unstable; urgency=low
 
   * Finalized v9 mode, which is the new recommended default.
