dh_install: Man page clarification. Closes: #659635

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20120116) UNRELEASED; urgency=low
 
   * dh_auto_install: Set AM_UPDATE_INFO_DIR=no to avoid automake
     generating an info dir file. Closes: #634741
+  * dh_install: Man page clarification. Closes: #659635
 
  -- Joey Hess <joeyh@debian.org>  Wed, 08 Feb 2012 13:46:13 -0400
 
