remove noopt mention
debhelper used to have its own noopt handling, but this was replaced by
dpkg-buildflags doing it

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -506,7 +506,7 @@ B<dh> does not default to enabling --with=python-support
 
 All of the B<dh_auto_>I<*> debhelper programs and B<dh> set
 environment variables listed by B<dpkg-buildflags>, unless
-they are already set. They support DEB_BUILD_OPTIONS=noopt too.
+they are already set.
 
 =item -
 
