--- a/debhelper.pod
+++ b/debhelper.pod
@@ -510,8 +510,8 @@ they are already set.
 
 =item -
 
-B<dh_auto_configure> passes CFLAGS to perl F<Makefile.PL> and
-F<Build.PL>
+B<dh_auto_configure> passes B<dpkg-buildflags> CFLAGS, CPPFLAGS, and
+LDFLAGS to perl F<Makefile.PL> and F<Build.PL>
 
 =item -
 
