Also include CFLAGS in ld line for perl. Closes: #662666

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120312) UNRELEASED; urgency=low
+
+  * Also include CFLAGS in ld line for perl. Closes: #662666
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Mar 2012 14:26:24 -0400
+
 debhelper (9.20120311) unstable; urgency=low
 
   * dh_auto_install: Set AM_UPDATE_INFO_DIR=no to avoid automake
