--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (9.20120312) UNRELEASED; urgency=low
+debhelper (9.20120312) unstable; urgency=low
 
   * Also include CFLAGS in ld line for perl. Closes: #662666
 
- -- Joey Hess <joeyh@debian.org>  Tue, 13 Mar 2012 14:26:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Mar 2012 14:27:06 -0400
 
 debhelper (9.20120311) unstable; urgency=low
 
