Revert avoid expanding shell metacharacters in sed call in autoscript(). It breaks dh_usrlocal and must be considered part of its interface. Added to interface documentation. Closes: #665263

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (9.20120313) UNRELEASED; urgency=low
+
+  * Revert avoid expanding shell metacharacters in sed call in autoscript().
+    It breaks dh_usrlocal and must be considered part of its interface.
+    Added to interface documentation.
+    Closes: #665263
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 Mar 2012 17:35:48 -0400
+
 debhelper (9.20120312) unstable; urgency=low
 
   * Also include CFLAGS in ld line for perl. Closes: #662666
