--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (9.20120313) UNRELEASED; urgency=low
+debhelper (9.20120322) unstable; urgency=low
 
   * Revert avoid expanding shell metacharacters in sed call in autoscript().
     It breaks dh_usrlocal and must be considered part of its interface.
     Added to interface documentation.
     Closes: #665263
 
- -- Joey Hess <joeyh@debian.org>  Thu, 22 Mar 2012 17:35:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 Mar 2012 17:37:56 -0400
 
 debhelper (9.20120312) unstable; urgency=low
 
