Fix a typo in debhelper.pod
Closes: #665891

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -87,7 +87,7 @@ characters (B<?> and B<*> and B<[>I<..>B<]> character classes) in the files.
 You can also put comments in these files; lines beginning with B<#> are
 ignored.
 
-The syntax of these files is intentionally kept very simple to make then
+The syntax of these files is intentionally kept very simple to make them
 easy to read, understand, and modify. If you prefer power and complexity,
 you can make the file executable, and write a program that outputs
 whatever content is appropriate for a given situation. When you do so,
