Fix a typo. Closes: #665891

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120323) UNRELEASED; urgency=low
+
+  * Fix a typo. Closes: #665891
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Mar 2012 17:18:58 -0400
+
 debhelper (9.20120322) unstable; urgency=low
 
   * Revert avoid expanding shell metacharacters in sed call in autoscript().
