Fix “compatab*” vs. “compatib*” typos.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -257,7 +257,7 @@ is manually specified with the B<--buildsystem> option.
 
 =back
 
-=head1 COMPATABILITY LEVELS
+=head1 COMPATIBILITY LEVELS
 
 From time to time, major non-backwards-compatible changes need to be made
 to debhelper, to keep it clean and well-designed as needs change and its
