--- a/debian/changelog
+++ b/debian/changelog
@@ -4586,7 +4586,7 @@ debhelper (2.1.0) unstable; urgency=low
     In the meantime, lots of packages have switched to using v2, despite my
     warnings that doing so leaves packages open to being broken without
     notice until v2 is complete.
-  * Therefore, I am calling v2 complete, as it is. Future non-compatabile
+  * Therefore, I am calling v2 complete, as it is. Future non-compatible
     changes will happen in v3, which will be started soon. This means that
     by using debhelper v2, one major thing changes: debhelper uses
     debian/<package> as the temporary directory for *all* packages;
@@ -5389,7 +5389,7 @@ debhelper (2.0.00) unstable; urgency=low
     current compatibility level is equal to that number.
   * doc/PROGRAMMING: documented that.
   * debhelper itself now builds using DH_COMPAT=2.
-  * dh_debstd forces DH_COMPAT=1, because it needs to stay compatable with
+  * dh_debstd forces DH_COMPAT=1, because it needs to stay compatible with
     debstd after all.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Jul 1999 13:37:58 -0700
