--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -519,7 +519,7 @@ msgstr ""
 
 #. type: =head1
 #: debhelper.pod:260
-msgid "COMPATABILITY LEVELS"
+msgid "COMPATIBILITY LEVELS"
 msgstr ""
 
 #. type: textblock
