--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -721,7 +721,7 @@ msgstr ""
 
 #. type: =head1
 #: debhelper.pod:260
-msgid "COMPATABILITY LEVELS"
+msgid "COMPATIBILITY LEVELS"
 msgstr "KOMPATIBILITÄTSSTUFEN"
 
 #. type: textblock
