--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -808,7 +808,7 @@ msgstr ""
 
 #. type: =head1
 #: debhelper.pod:260
-msgid "COMPATABILITY LEVELS"
+msgid "COMPATIBILITY LEVELS"
 msgstr "NIVELES DE COMPATIBILIDAD"
 
 # type: textblock
