--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -788,7 +788,7 @@ msgstr ""
 
 #. type: =head1
 #: debhelper.pod:260
-msgid "COMPATABILITY LEVELS"
+msgid "COMPATIBILITY LEVELS"
 msgstr ""
 
 # type: textblock
