--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20120323) UNRELEASED; urgency=low
 
   * Fix a typo. Closes: #665891
   * Conflict with too old automake for AM_UPDATE_INFO_DIR=no. Closes: #666901
+  * dh_md5sums: Don't skip DEBIAN directories other than the control files
+    one. Closes: #668276
 
  -- Joey Hess <joeyh@debian.org>  Mon, 26 Mar 2012 17:18:58 -0400
 
