--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20120323) UNRELEASED; urgency=low
+debhelper (9.20120410) unstable; urgency=low
 
   [ Joey Hess ]
   * Fix a typo. Closes: #665891
@@ -12,7 +12,7 @@ debhelper (9.20120323) UNRELEASED; urgency=low
     instead of just an upstart job and a symlink to a compat wrapper.
     Closes: #577040
 
- -- Joey Hess <joeyh@debian.org>  Mon, 26 Mar 2012 17:18:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2012 12:51:15 -0400
 
 debhelper (9.20120322) unstable; urgency=low
 
