--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (9.20120411) UNRELEASED; urgency=low
+debhelper (9.20120417) unstable; urgency=low
 
   * cmake: Pass CPPFLAGS in CFLAGS. Closes: #668813
     Thanks, Simon Ruderich for the patch and for verifying no affected
     package is broken by this change.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2012 09:09:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2012 09:10:29 -0400
 
 debhelper (9.20120410) unstable; urgency=low
 
