cmake: Only pass CPPFLAGS in CFLAGS in v9.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120418) unstable; urgency=low
+
+  * cmake: Only pass CPPFLAGS in CFLAGS in v9.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2012 16:54:39 -0400
+
 debhelper (9.20120417) unstable; urgency=low
 
   * cmake: Pass CPPFLAGS in CFLAGS. Closes: #668813
