--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120419) unstable; urgency=low
+
+  * Fix compat level checking for cmake. Closes: #669181
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2012 19:33:35 -0400
+
 debhelper (9.20120418) unstable; urgency=low
 
   * cmake: Only pass CPPFLAGS in CFLAGS in v9.
