dh_installman: Recognize sections from mdoc .Dt entries. Closes: #670210 Thanks, Guillem Jover

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20120420) UNRELEASED; urgency=low
+
+  * dh_installman: Recognize sections from mdoc .Dt entries. Closes: #670210
+    Thanks, Guillem Jover
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 24 Apr 2012 11:52:22 -0400
+
 debhelper (9.20120419) unstable; urgency=low
 
   * Fix compat level checking for cmake. Closes: #669181
